Potential fix for font scaling issue on mobile safari

--- a/global.css
+++ b/global.css
@@ -78,14 +78,14 @@ container {
   top: 30vw;
   left: 61vw;
   color: whitesmoke;
-  font-size: 10vw;
+  font-size: 10vmin;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .home-subtitle {
-  font-size: 5vw;
+  font-size: 5vmin;
 }
 
 .about-text {
